--- a/src/Playwright.FSharp.Dsl/Playwright.FSharp.Dsl.fsproj
+++ b/src/Playwright.FSharp.Dsl/Playwright.FSharp.Dsl.fsproj
@@ -18,6 +18,7 @@
     <Compile Include="Extensions.fs" />
     <Compile Include="Playwright.FSharp.Dsl.fs" />
     <Compile Include="Playwright.FSharp.Dsl.Generated.fs" />
+    <Compile Include="Playwright.FSharp.Dsl.Extensions.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Playwright" Version="1.15.3" />
